--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "layout/adjustment";
 @import "layout/side-nav";
 @import "layout/bot-scroll";
+@import "layout/onepage-scroll.scss";
 
 //section
 @import "section/header";
