--- a/scss/layout/adjustment.scss
+++ b/scss/layout/adjustment.scss
@@ -5,7 +5,7 @@
   overflow: hidden;
 }
 
-.maincontent {
+.main {
   height: 100%;
   min-height: 650px;
   position: relative;
@@ -19,6 +19,7 @@
   min-height: 100vh;
   width: 100vw;
 }
+
 
 .container {
   width: 95%;
