--- a/scss/section/team.scss
+++ b/scss/section/team.scss
@@ -67,8 +67,9 @@
   justify-content: center;
   align-items: center;
   margin-bottom: 40px;
-  height: 0;
-  overflow: hidden;
+  // height: 0;
+  // overflow: hidden;
+  display: none;
 }
 
 // .team__item--active {
