add overflow for burger menu

--- a/css/main.css
+++ b/css/main.css
@@ -92,6 +92,14 @@ ul {
   min-height: 100vh;
   width: 100vw; }
 
+.fixed {
+  position: fixed;
+  /*позицианируем чтобы исчез скролл*/
+  width: 100%;
+  /*что бы верстка не складывалась по ширине*/
+  position: fixed;
+  overflow: hidden; }
+
 .container {
   width: 95%;
   max-width: 940px;
@@ -420,6 +428,7 @@ ul {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
+  overflow: hidden;
   display: none; }
 
 .natural__burger-menu--active {
