fixed adaptive for slider

--- a/css/main.css
+++ b/css/main.css
@@ -625,10 +625,9 @@ ul {
   width: 60px;
   height: 60px; }
 
-.slide__decor-img {
-  background: url(../img/decor/dark-beef.png) center center no-repeat;
-  width: 450px;
-  height: 335px; }
+.slide__img {
+  width: 70%;
+  margin-top: 80px; }
 
 .slide__content {
   width: 45%; }
@@ -706,7 +705,7 @@ ul {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  height: 700px; }
+  height: 720px; }
   @media screen and (max-width: 992px) {
     .slider__slide {
       -ms-flex-wrap: wrap;
