--- a/scss/section/delivery.scss
+++ b/scss/section/delivery.scss
@@ -144,14 +144,14 @@
 .delivery__bg {
   position: absolute;
   background: black;
-  opacity: .5;
   width: 100vw;
   height: 100vh;
+  opacity: .5;
   display: none;
+}
 
-  &--active {
-    display: initial;
-  }
+.delivery__bg--active {
+  display: block;
 }
 
 .delivery__msg {
@@ -177,8 +177,8 @@
     left: 54px;
     top: 52px;
   }
+}
 
-  &--active {
-    display: initial;
-  }
+.delivery__msg--active {
+  display: block;
 }
