--- a/scss/section/staff.scss
+++ b/scss/section/staff.scss
@@ -2,6 +2,56 @@
   height: 100vh;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
+}
+
+.staff__popup-bg {
+  position: absolute;
+  background: black;
+  opacity: .7;
+  height: 100vh;
+  width: 100vw;
+  z-index: 10;
+  display: none;
+
+  &--active {
+    display: block;
+  }
+}
+
+.popup__btn {
+  background: url(../img/decor/close.png) center center no-repeat;
+  width: 20px;
+  height: 20px;
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.staff__popup {
+  z-index: 999;
+  position: absolute;
+  width: 460px;
+  height: 260px;
+  background: white;
+  border-radius: 5px;
+  top: 37%;
+  right: 36%;
+  display: none;
+
+  @include laptop() {
+    right: 20%;
+  }
+
+  @include phones() {
+    right: 5px;
+  }
+
+  &--active {
+    display: block;
+  }
 }
 
 .staff__ava {
