--- a/scss/section/staff.scss
+++ b/scss/section/staff.scss
@@ -35,6 +35,7 @@
   position: absolute;
   width: 460px;
   height: 260px;
+  padding: 20px;
   background: white;
   border-radius: 5px;
   top: 37%;
@@ -52,6 +53,16 @@
   &--active {
     display: block;
   }
+}
+
+.popup-title {
+  font-family: 'gagalin', Arial, Helvetica, sans-serif;
+  font-size: rem(14px);
+}
+
+.popup-text {
+  font-family: 'Ubuntu-Light', Arial, serif;
+  font-size: rem(14px);
 }
 
 .staff__ava {
