--- a/scss/layout/bot-scroll.scss
+++ b/scss/layout/bot-scroll.scss
@@ -10,6 +10,8 @@
   position: absolute;
   bottom: 5%;
   right: 50%;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
 }
 
 .bot-scroll__scroll-logo {
